# bernstein

./: .aider.conf.yml  .coderabbit.yaml  .coverage  .coverage-baseline.json  .gitignore  .goosehints  .importlinter  .mcp.json  .release-notes-v1.10.4.draft.md  .release-notes-v1.10.4.outreach.md  .semgrep.yml  .sourcery.yaml  .venv  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVENTIONS.md  Dockerfile  README.md  SECURITY.md  _typos.toml  action.yml  bernstein-skills.toml  bernstein.yaml  docker-compose.yaml  mkdocs.yml  mutmut_config.py  pyproject.toml  pyrightconfig.strict.json  release-please-config.json  release-please-manifest.json  renovate.json  server.json  sonar-project.properties  typos.toml  vulture_whitelist.py
.bernstein/: rules.yaml
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_seed_parser.py  project.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pr-text-hygiene-deny.json  pull_request_template.md  r-counter-allowlist.txt
.plugin/: plugin.json
.semgrep/: baseline.yml
.well-known/: security.txt
Formula/: README.md  bernstein.rb
action/: entrypoint.sh
agents/: orchestrator.md
benchmarks/: README.md  agent-hq-comparison.md  bench_orchestrator.py  run_benchmark.py
commands/: run.md  status.md  stop.md
community/: awesome-bernstein-plugins.md
config/: eu_ai_act_clause_map.yaml
docs/: ADAPTER_GUIDE.md  AGENTIC_MANIFESTO.md  CHANGELOG.md  CODE_REVIEW.md  CONFIG.md  DEPENDENCY_RESOLVER.md  DEPLOYMENT.md  DESIGN.md  ENTERPRISE.md  GETTING_STARTED.md  LIFECYCLE.md  MODEL_POLICY.md  adapter-deferred.md  adapters.html  agents-md.md  agents.txt  api-reference.html  api.html  blog.html  competitors.md  concepts.html  content-calendar.md  decomposition-verification.md  doc.html  docs-index.html  getting-started.html  github-action.md  index.html  index.md  leaderboard.html  limitations.html  lineage.md  llm-citation-surface.md  llms-full.txt  llms.txt  robots.txt  routine-scenarios.md  script.js  sitemap.xml  style.css  (+4 more)
examples/: README.md  (+2 more)
verify_cli/: README.md  pyproject.toml
verify_cli/bernstein_verify/: __init__.py  __main__.py  verify.py
verify_cli/tests/: conftest.py  test_airgap.py  test_cli.py  test_no_bernstein_install.py  test_verify.py
(+4356 files in other folders)
