[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bernstein-verify"
version = "1.0.0"
description = "Standalone auditor CLI for Bernstein lineage v1 compliance packs. Verifies Ed25519 JWS signatures, RFC 8785 JCS canonicalisation, and parent-hash chains on an air-gapped laptop."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alex Chernysh", email = "alex@alexchernysh.com" }]
keywords = [
    "audit",
    "compliance",
    "lineage",
    "ed25519",
    "jws",
    "sigstore",
    "transparency-log",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Typing :: Typed",
]
# Hard rule: this wheel is auditor-grade. Two deps only.
# - cryptography: Ed25519 signature verification (RFC 8037).
# - click: argument parsing for the CLI entry-point.
# Anything else must be vendored or re-implemented locally so the
# air-gapped laptop install stays a single `pip install bernstein-verify`.
dependencies = [
    "cryptography>=43",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
bernstein-verify = "bernstein_verify.__main__:cli"

[project.urls]
Homepage = "https://bernstein.run"
Repository = "https://github.com/sasha-c/bernstein"

[tool.hatch.build.targets.wheel]
packages = ["bernstein_verify"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: integration tests that spin up a fresh venv (network NOT required, but ~30s)",
]
